@@ -1,16 +1,35 @@
 // $Id$
 
+project(*idl): taoidldefaults {
+  IDL_Files {
+    Messenger.idl
+  }
+  custom_only = 1
+}
+
 project(*Server): taoexe, portableserver, anytypecode, avoids_minimum_corba, avoids_corba_e_compact, avoids_corba_e_micro {
+  after += *idl
   Source_Files {
     Messenger_i.cpp
     MessengerServer.cpp
     MessengerLocator_i.cpp
   }
+  Source_Files {
+    MessengerC.cpp
+    MessengerS.cpp
+  }
+  IDL_Files {
+  }
 }
 
 project(*Client): taoexe, anytypecode, avoids_minimum_corba, avoids_corba_e_compact, avoids_corba_e_micro {
+  after += *idl
+  Source_Files {
+    MessengerClient.cpp
+  }
   Source_Files {
     MessengerC.cpp
-    MessengerClient.cpp
+  }
+  IDL_Files {
   }
 }
